# OmniClip-RAG

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MCP_SETUP.md  OmniClipRAG-MCP.spec  OmniClipRAG.spec  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RUNTIME_SETUP.md  STORAGE_PRECHECK.md  THIRD_PARTY_NOTICES.md  build.py  launcher.py  launcher_mcp.py  launcher_support.py  pyi_rth_omniclip.py  pyproject.toml  pytest.ini  requirements.txt  server.json
docs/: ASSET_PROMPTS.md  app.js  index.html  styles.css
omniclip_rag/: __init__.py  __main__.py  app_logging.py  build_control.py  canary_backend.py  clipboard.py  config.py  data_root_bootstrap.py  errors.py  formatting.py  gui.py  legacy_single_instance.py  models.py  parser.py  preflight.py  process_utils.py  query_runtime.py  reranker.py  retrieval_policy.py  runtime_canary.py  runtime_layout.py  runtime_recovery.py  runtime_support.py  service.py  storage.py  timing.py  ui_i18n.py  ui_tooltip.py  vector_index.py
plans/: GPU Runtime与扩展建库UX收尾计划.md  Markdown主查询与Runtime稳定性RCA计划.md  OmniClip RAG MCP接入实施计划.md  OmniClip RAG 官方MCP Registry登月计划.md  OmniClip官网设计审稿提问包.md  Qt版页面与控件映射表.md  Runtime跨版本稳定化与Tika全量格式闭环计划.md  Tika建库稳定性与安装进度闭环计划.md  内置Python与Runtime安装链长期稳定化总计划.md  建库性能优化计划.md  扩展建库强化总计划.md  扩展格式隔离子系统实施计划.md  旧UI全量功能与布局复刻清单.md  检索优化计划.md
pyinstaller_hooks/: hook-rich.py
releases/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.10.md  RELEASE_NOTES_v0.1.11.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.6.md  (+19 more)
(+107 files in other folders)
