[project]
name = "omniclip-rag"
version = "0.4.1"
description = "Local-first desktop RAG for Markdown and Logseq vaults."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "msjsc001" }
]
keywords = ["rag", "markdown", "logseq", "sqlite", "lancedb", "desktop"]
dependencies = [
  "mcp>=1,<2",
]

[project.urls]
Repository = "https://github.com/msjsc001/OmniClip-RAG"
Documentation = "https://github.com/msjsc001/OmniClip-RAG"
